save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
@@ -1,1 +1,9 @@
-content moved to http://dvcs.w3.org/hg/prov/file/a1d1ff134131/model/prov-dictionary.html
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<html><head>
+<title>301 Moved Permanently</title>
+</head><body>
+<h1>Moved Permanently</h1>
+<p>The document has moved <a href="https://dvcs.w3.org/hg/prov/raw-file/tip/ontology/prov-o-html-sections/description-collections.inc.html">here</a>.</p>
+<hr>
+<address>Apache/2.2.16 (Debian) Server at dvcs.w3.org Port 80</address>
+</body></html>
