--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -1,239 +1,9 @@
-<!-- incorporate https://dvcs.w3.org/hg/prov/rev/e3ecc51f4598 -->
-     <section id="description-qualified-terms">
-       <h3>Qualified Terms</h3>
-
-       <p>The Qualified Terms category is the result of
-         applying the <strong>Qualification Pattern</strong> [[LD-Patterns-QR]] to the simple (unqualified)
-         relations available in the <a href="#prov-starting-point-owl-terms-at-a-glance">Starting Point</a> and 
-         <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
-         The terms in this category are for users who wish to provide further details about the provenance-related influence among
-         Entities, Activities, and Agents.
-       </p>
-
-       <p>The Qualification Pattern restates an unqualified influence 
-         relation by using an intermediate class that represents the influence between two resources. 
-         This new instance, in turn, can be annotated with additional descriptions of the influence that one resource had upon another.
-         The following two tables list the influence relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
-
-         For example, the second row of the first table indicates that to elaborate how an <span class="repeated">prov:Activity</span>
-         <span class="repeated">prov:used</span> a particular <span class="repeated">prov:Entity</span>, one creates an instance of <span class="repeated">prov:Usage</span>
-         that indicates the influencing entity with the <span class="repeated">prov:entity</span> property.
-         Meanwhile, the influenced <span class="repeated">prov:Activity</span> indicates the <span class="repeated">prov:Usage</span> with the property 
-         <span class="repeated">prov:qualifiedUsage</span>.
-         The resulting structure that qualifies the an Activity's usage of an Entity is illustrated in <a href="#qualified-terms-figure">Figure 4a</a> below.
-       </p>
-
-      <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>Seven <a href="#description-starting-point-terms">Starting Point</a> relations can be further described using the Qualification Pattern.
-            They are listed in the following normative table.
-         </p>
-         <div style="text-align: center">
-            {% include "includes/qualifed-forms-starting-point.html" %}
-         </div>
-      </div>
-
-      <div id="qualified-forms-expanded" style="padding: 10px">
-         <p>Seven <a href="#description-expanded-terms">Expanded</a> relations can be further described using the Qualification Pattern.
-            They are listed in the following normative table.
-         </p>
-         <div style="text-align: center">
-            {% include "includes/qualifed-forms-expanded.html" %}
-         </div>
-      </div>
-
-
-      <p>The qualification classes and properties shown in the previous two tables can also be found in the normative <a href="#cross-reference">cross reference</a> 
-        in the next section of this document. 
-
-         All influence classes (e.g. <span class="repeated">prov:Association</span>, <span class="repeated">prov:Usage</span>) are extensions of 
-         <a class="qname" href="#Influence">prov:Influence</a> and either 
-         <a class="qname" href="#EntityInfluence">prov:EntityInfluence</a>, 
-         <a class="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>, or
-         <a class="qname" href="#AgentInfluence">prov:AgentInfluence</a>, which determine the property used to cite the influencing resource (either
-         <a class="qname" href="#entity">prov:entity</a>,
-         <a class="qname" href="#activity">prov:activity</a>, or
-         <a class="qname" href="#agent">prov:agent</a>, respectively). 
-         Because <span class="repeated">prov:Influence</span> is a broad relation, its most specific subclasses (e.g. <span class="repeated">prov:Communication</span>, 
-         <span class="repeated">prov:Delegation</span>, <span class="repeated">prov:End</span>, <span class="repeated">prov:Revision</span>, etc.) should be used when applicable.
-
-         <div id="narrative-example-qualified-1" about="#narrative-example-qualified-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-            <p>
-               <a href="#narrative-example-qualified-1"/>Example 6</a>:
-            </p>
-            <p>
-               For example, given the unqualified statement:
-               <pre class="example">
-               :e1 
-                  a prov:Entity;
-                  prov:wasGeneratedBy :a1;
-               .
-
-               :a1 a prov:Activity .
-               </pre>
-            </p>
-         </div>
-
-         <p>One can find that <a class="qname" href="#wasGeneratedBy">prov:wasGeneratedBy</a> 
-            can be qualified using the qualification property <a class="qname" href='#qualifiedGeneration'>prov:qualifiedGeneration</a>,
-            the class <a class="qname" href='#Generation'>prov:Generation</a> (a subclass of <a class ="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>),
-            and the property <a class="qname" href='#activity'>prov:activity</a>.
-            From this, the influence relation above can be restated with the <em>qualification pattern</em> as:
-         </p>
-
-         <div id="narrative-example-qualified-2" about="#narrative-example-qualified-2" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-            <p>
-               <a href="#narrative-example-qualified-2"/>Example 7</a>:
-            </p>
-            <pre class="example">
-            :e1 
-               a prov:Entity;
-               prov:wasGeneratedBy      :a1;
-               prov:qualifiedGeneration :e1Gen; # Add the qualification.
-            .
-
-            :e1Gen 
-               a prov:Generation;
-               prov:activity            :a1;    # Cite the influencing Activity.
-               ex:foo                   :bar;   # Describe the Activity :a1's influence upon the Entity :e1.
-            .
-
-            :a1 a prov:Activity .
-            </pre>
-         </div>
-
-         <p>
-            The asserter can thus attach additional properties to <code>:e1Gen</code> to describe the generation of <code>:e1</code> by <code>:a1</code>.
-         </p>
-
-         <p>
-            As can be seen in this example, qualifying an influence relation provides a second form (e.g. <code>:e1 prov:qualifiedGeneration :e1Gen</code>) to express an equivalent influence relation 
-            (e.g. <code>:e1 prov:wasGeneratedBy :a1</code>).
-            It is correct and acceptable for an implementer to use either qualified or unqualified forms as they choose (or both), 
-            and a consuming application should be prepared to recognize either form. 
-            Consuming applications SHOULD recognize both qualified and unqualified forms, and treat the qualified form as implying the unqualified form.
-            Because the qualification form is more verbose, the unqualified form should be favored in cases where additional properties are not provided.
-            When the qualified form is expressed, including the equivalent unqualified form can facilitate PROV-O consumption, and is thus encouraged.
-        </p>
-            <!-- To simplify client queries, 
-            any qualified relation SHOULD be accompanied by the equivalent unqualified statement. 
-            Unqualified properties SHOULD NOT have the equivalent qualified form
-            asserted unless it adds additional information. -->
-
-      <p>In addition to the previous two tables, <a href="#qualified-terms-figure">Figure 4</a> 
-         illustrates the classes and properties needed to apply the qualification pattern to ten of the fourteen qualifiable influence relations. 
-
-         For example, while <a class="qname" href="#qualifiedUsage">prov:qualifiedUsage</a>, 
-         <a class="qname" href="#Usage">prov:Usage</a>, and <a class="qname" href="#entity">prov:entity</a> are used to qualify 
-         <span class="repeated">prov:used</span> relations, 
-   
-         <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, 
-         and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> 
-         relations. This pattern applies to the twelve other influence relations that can be qualified.
-      </p>
-
-      <p>In subfigure <strong>a</strong> the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property and references an instance of 
-      <span class="repeated">prov:Usage</span>, which in turn provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. 
-      The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. 
-      In this case, the time that the Activity used the Entity is provided using the <a href="#atTime" class="qname">prov:atTime</a> property and a literal 
-      <span class="repeated">xsd:dateTime</span> value. The <span class="repeated">prov:atTime</span> property can be used to describe any 
-      <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a> (including 
-      <a href="#Start" class="qname">prov:Start</a>, 
-      <a href="#Generation" class="qname">prov:Generation</a>, 
-      <a href="#Usage" class="qname">prov:Usage</a>, 
-      <a href="#Invalidation" class="qname">prov:Invalidation</a>, and
-      <a href="#End" class="qname">prov:End</a>).
-      </p>
-
-      <p>Similarly in subfigure <strong>j</strong>, the <span class="repeated">prov:qualifiedAssociation</span> property parallels the 
-      <span class="repeated">prov:wasAssociatedWith</span> property and references an instance of 
-      <span class="repeated">prov:Association</span>, which in turn provides attributes of the 
-      <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The 
-      <span class="repeated">prov:agent</span> property is used to cite the Agent that influenced the Activity. 
-      In this case, the plan of actions and steps that the Agent used to achieve its goals is provided using the 
-      <a href="#hadPlan" class="qname">prov:hadPlan</a> property and an instance of <a href="#Plan" class="qname">prov:Plan</a>. Further, the 
-      <a href="#hadRole" class="qname">prov:hadRole</a> property and <a href="#Role" class="qname">prov:Role</a> 
-      class can be used to describe the function that the agent served with respect to the Activity. 
-      Both <span class="repeated">prov:Plan</span> and <span class="repeated">prov:Role</span> are left to be extended by applications.
-      </p>
-
-       <div id="qualified-terms-figure" style="text-align: center;" class="figure">
-            <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
-            <!--img src="prov-o-diagrams/Qualified-Association.png"-->
-            <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/qualified-patterns.svg"
-                 style="width: 70%; min-width: 25em; max-width: 70em" 
-                 alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <div class="figcaption"><a href="#qualified-terms-figure">Figure 4</a>: 
-            Illustration of the properties and classes to use (<span style="color: blue">in blue</span>)
-            to qualify the 
-            <a href="#description-starting-point-terms">starting point</a> and 
-            <a href="#description-expanded-terms">expanded</a> influence relations (<strong>dotted black</strong>). <br/>
-            The diagrams in this document depict Entities as ovals, Activities as rectangles, and Agents as pentagons.
-            <a href="#Quotation">Quotation</a>, <a href="#Revision">Revision</a>, and <a href="#PrimarySource">PrimarySource</a> 
-             are omitted because they are special forms of <a href="#Derivation">Derivation</a> and follow the same pattern as subfigure <strong>g</strong>.</div>
-       </div>
-
-
-
-
-      <p>The following two examples show the result of applying the Usage and Association patterns to the chart-making example from <a href=#description-starting-point-terms>Section 3.1</a>.
-      </p>
-
-      <div id="narrative-example-qualified-3" about="#narrative-example-qualified-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-         <p>
-            <a href="#narrative-example-qualified-3"/>Example 8</a>:
-         </p>
-          <div class="exampleOuter">
-             <div><b>Qualified Usage</b></div>
-               <p>The <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property to provide an additional description to <code>:illustrationActivity</code>. The instance of <span class="repeated">prov:Usage</span> cites the data used (<code>:aggregatedByRegions</code>) and the time the activity used it (<code>2011-07-14T03:03:03Z</code>).
-             </p>
-                <pre class="example">{% include "includes/eg16-journalism-qualified-usage.ttl" %}</pre>
-          </div>
-      </div>
-
-      <div id="narrative-example-qualified-4" about="#narrative-example-qualified-4" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-         <p>
-            <a href="#narrative-example-qualified-4"/>Example 9</a>:
-         </p>
-        <div class="exampleOuter">
-           <div><b>Qualified Association</b></div>
-            <p>The <span class="repeated">prov:qualifiedAssociation</span> property parallels the 
-            <span class="repeated">prov:wasAssociatedWith</span> property to provide an additional description about the <code>:illustrationActivity</code> that Derek influenced. 
-            The instance of <span class="repeated">prov:Association</span> cites the influencing agent (<code>:derek</code>) that followed the instructions (<code>:tutorial_blog</code>). 
-            Further, Derek served the role of <code>:illustrationist</code> during the activity.
-            </p>
-              <pre class="example">{% include "includes/eg16-journalism-qualified-association.ttl" %}</pre>
-        </div>
-      </div>
-
-
-       <p>This section finishes with two more examples of qualification as applied to the chart-making example from <a href=#description-starting-point-terms>Section 3.1</a>.
-       </p>
-
-
-      <div id="narrative-example-qualified-5" about="#narrative-example-qualified-5" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-         <p>
-            <a href="#narrative-example-qualified-5"/>Example 10</a>:
-         </p>
-        <div class="exampleOuter">
-           <div><b>Qualified Generation</b></div>
-            <p>The <span class="repeated">prov:qualifiedGeneration</span> property parallels the <span class="repeated">prov:wasGeneratedBy</span> property to provide an additional description to <code>:bar_chart</code>. The instance of <span class="repeated">prov:Generation</span> cites the time (2011-07-14T15:52:14Z) that the activity (<code>:illustrationActivity</code>) generated the chart (<code>:bar_chart</code>).
-            </p>
-              <pre class="example">{% include "includes/eg16-journalism-qualified-generation.ttl" %}</pre>
-        </div>
-      </div>
-
-      <div id="narrative-example-qualified-6" about="#narrative-example-qualified-6" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-         <p>
-            <a href="#narrative-example-qualified-6"/>Example 11</a>:
-         </p>
-        <div class="exampleOuter">
-           <div><b>Qualified Derivation</b></div>
-           <p>The <span class="repeated">prov:qualifiedDerivation</span> property parallels the <span class="repeated">prov:wasDerivedFrom</span> 
-              property to provide an additional description to <code>:bar_chart</code>. The instance of <span class="repeated">prov:Derivation</span> 
-              cites the activity (<code>:illustrationActivity</code>) and the Usages and Generations that the activity conduced to create the <code>:bar_chart</code>.
-           </p>
-           <pre class="example">{% include "includes/eg16-journalism-qualified-derivation.ttl" %}</pre>
-        </div>
-      </div>
-
-	  </section>
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<html><head>
+<title>301 Moved Permanently</title>
+</head><body>
+<h1>Moved Permanently</h1>
+<p>The document has moved <a href="https://dvcs.w3.org/hg/prov/raw-file/tip/ontology/prov-o-html-sections/description-qualified-terms.inc.html">here</a>.</p>
+<hr>
+<address>Apache/2.2.16 (Debian) Server at dvcs.w3.org Port 80</address>
+</body></html>
