save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -42,6 +42,11 @@
          <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively. 
          Agents can also be responsible for other Agents' actions. In this case of delegation, the influencing Agent <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> 
          another Agent that also bears responsibility for the influenced Activity or Entity.
+      </p>
+
+      <p>The properties rdf:type and rdfs:label are used to express <a href="https://dvcs.w3.org/hg/prov/raw-file/default/model/prov-dm.html#term-attribute-type">prov:type</a> 
+         and <a href="https://dvcs.w3.org/hg/prov/raw-file/default/model/prov-dm.html#term-attribute-label">prov:label</a>, respectively.
+      </p>
 
       <div id="starting-points-figure" style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
